# MyHash

./: CMakeLists.txt  test  test.cpp  test1.cpp  tmp
data/2024-09-30-22-09-08/: 8_100_mutex_overall_throughput.csv  8_10240_mutex_overall_throughput.csv  8_1024_mutex_overall_throughput.csv
include/: Myhash.h  client.h  mm.h
plotscripts/: boc_execution_times.csv  combined_execution_times.csv  dataProfessing.py  diff_size_execution_times.csv  free_execution_times_4.csv  lockfree_execution_times_1024.csv  lockfree_execution_times_4.csv  lockfree_execution_times_8.csv  mergeData.py  mutex_execution_times.csv  plotline.py
scripts/: breakpoints.txt  run.sh  run_client.sh  tmp
src/: Myhash.cpp  Myhash.h  client.cpp  client.h  mm.cpp  mm.h
util/: bitmap.hpp  checksum.hpp  util.hpp
